# termo

./: Cargo.toml  go.mod  go.sum  handler.go  main.go
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  App.vue  Row.tsx  Rows.tsx  app.css
client/src/assets/: main.css
config/: config.go  db.go  env.go  logger.go
server/: go.mod  go.sum  main.go
server/config/: config.go  db.go  env.go  logger.go
server/dicioapi/: client.go  model.go
server/oneword/: handler.go  model.go  repo.go  router.go
src/: config.rs  db.rs  dicio_api.rs  error.rs  main.rs  state.rs
src/one_word/: handler.rs  mod.rs  model.rs  router.rs
